--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,11 @@ img {
 	width: 100%;
 	object-fit: cover;
 }
+.logo {
+    height: 80px;
+    width: 80px;
+    object-fit: contain;
+}
 p {
 	color: black;
 	font-size: 1.4rem;
@@ -61,14 +66,6 @@ p {
 .cta:hover {
 	color: white;
 	background-color: crimson;
-}
-.brand h1 {
-	font-size: 3rem;
-	text-transform: uppercase;
-	color: white;
-}
-.brand h1 span {
-	color: crimson;
 }
 
 /* Header section */
@@ -261,7 +258,6 @@ p {
 #hero h1:nth-child(3) span {
 	animation-delay: 2.5s;
 }
-
 /* End Hero Section */
 
 /* Services Section */
@@ -428,6 +424,9 @@ p {
 	margin-bottom: 50px;
 	padding: 10px 20px;
 	font-size: 2rem;
+}
+#about .col-right .cta:hover {
+	color: white;
 }
 #about .col-left .about-img {
 	height: 100%;
