--- a/style.css
+++ b/style.css
@@ -65,14 +65,16 @@ a:hover {
 
 #popupDialog {
     position: absolute;
+    display: flex;
+    justify-content: center;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
     z-index: 1000;
     visibility: hidden;
+    transition: all 0.3 ease-in-out;
 }
 
 /* Hamburger-menu */
