--- a/style.css
+++ b/style.css
@@ -70,11 +70,11 @@ a:hover {
     top: 50%;
     left: 50%;
     padding: 20px;
+    background-color: white;
     border-radius: 8px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
     z-index: 1000;
     visibility: hidden;
-    transition: all 0.3 ease-in-out;
 }
 
 /* Hamburger-menu */
