--- a/style.css
+++ b/style.css
@@ -65,10 +65,11 @@ a:hover {
 
 #popupDialog {
     position: absolute;
-    display: flex;
-    justify-content: center;
+    display: block;
     top: 50%;
     left: 50%;
+    width: fit-content;
+    max-height: 0;
     padding: 20px;
     background-color: white;
     border-radius: 8px;
