--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ a:hover {
     top: 50%;
     left: 50%;
     width: fit-content;
+    margin: auto;
     padding: 20px;
     background-color: white;
     border-radius: 8px;
