--- a/style.css
+++ b/style.css
@@ -64,10 +64,12 @@ a:hover {
 }
 
 #popupDialog {
-    position: absolute;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     display: block;
     width: fit-content;
-    margin: auto;
     padding: 20px;
     background-color: white;
     border-radius: 8px;
