--- a/style.css
+++ b/style.css
@@ -145,7 +145,18 @@ a:hover {
 }
 
 .menu-links.open {
-  max-height: 300px;
+/*   max-height: 300px; */
+    width: 100vw;
+	height: 100vh;
+    left: 100%;
+	top: 0;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	z-index: 1;
+	overflow-x: hidden;
+	transition: 0.5s ease left;
 }
 
 .hamburger-icon.open span:first-child {
