--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -40,6 +40,10 @@
   .about-containers {
     margin-top: 0;
   }
+  .details-container {
+    max-width: 100%;
+    box-sizing: border-box;
+  }
 }
 
 @media screen and (max-width: 600px) {
