--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@
   --primary-bg-color: #f7e3cd;
   --primary-text-color: #000000;
   --secondary-color: #575757;
-  --btn-bg-color: #2196f3;
-  --cta-hover-color: #167bce;
+  --btn-bg-color: #000000;
+  --cta-hover-color: #000000;
   --btn-bg-light: #eeeeee;
 }
 
